--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
-    "zod": "^3.22.4"
+    "zod": "^3.25.76"
   }
 }
